<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_discount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lms.zp.JozveActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">





        <LinearLayout
            android:id="@+id/ll_bg_row_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_finish_cal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_finish_cal"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_time_cal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_time_cal"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_cal_cal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_cal_cal"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_row_cal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="12dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/tv_row_cal"
                android:textColor="@color/black"
                android:textDirection="rtl"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>