<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lms.zp.MainActivity">




    <!-- toolbar -->
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <LinearLayout
        android:id="@+id/header"
        android:layout_below="@id/app_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:scaleType="centerCrop"
            android:tint="#11000000"
            android:background="@drawable/shekamsalam"/>




    </LinearLayout>






        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_below="@id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_margin="20dp">


            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_onlineClass_main"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/buttons_bg_1"
                    android:text="@string/str_onlineClass"
                    android:drawableLeft="@mipmap/ic_classroom"
                    android:drawableTint="@color/material_blue_900"
                    android:textColor="@drawable/btn_state"
                    android:textSize="12dp"
                    android:onClick="mainOnclick"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btn_jozve_main"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/buttons_bg_1"
                    android:text="@string/str_jozve"
                    android:drawableLeft="@mipmap/ic_book"
                    android:drawableTint="@color/material_blue_900"
                    android:textColor="@drawable/btn_state"
                    android:textSize="12dp"
                    android:onClick="mainOnclick"
                    android:textStyle="bold" />


            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_cal_main"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/buttons_bg_1"
                    android:text="@string/str_cal"
                    android:drawableLeft="@mipmap/ic_calendar"
                    android:drawableTint="@color/material_blue_900"
                    android:textColor="@drawable/btn_state"
                    android:textSize="12dp"
                    android:onClick="mainOnclick"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_vedio_main"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:background="@drawable/buttons_bg_1"
                    android:text="@string/str_vedio"
                    android:drawableLeft="@mipmap/ic_video"
                    android:drawableTint="@color/material_blue_900"
                    android:textColor="@drawable/btn_state"
                    android:textSize="12dp"
                    android:onClick="mainOnclick"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_startTest_main"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons_bg_1"
                    android:text="@string/str_startTest"
                    android:drawableLeft="@mipmap/ic_test"
                    android:drawableTint="@color/material_blue_900"
                    android:textColor="@drawable/btn_state"
                    android:textSize="12dp"
                    android:onClick="mainOnclick"
                    android:textStyle="bold" />


            </TableRow>


        </TableLayout>





</RelativeLayout>
