<?xml version="1.0"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/click_discount_cardview"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/ripple"
    cardview:cardElevation="3dp">




    <LinearLayout
        android:id="@+id/click_linear_discount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ripple"
        android:orientation="vertical">



        <!-- Image Top -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                cardview:srcCompat="@drawable/loading" />

        </LinearLayout>



        <!-- Details Bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:orientation="vertical">



            <!-- Title Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_onlineClass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/title_class"
                    android:textStyle="bold"
                    android:textColor="#555555"
                    android:textSize="16sp" />

            </LinearLayout>



            <!-- Time Start Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#f7f7f7"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:background="@color/material_blue_900"
                    android:orientation="vertical" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:elevation="1dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_time_onlineClass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingRight="10dp"
                        android:text="@string/tv_time_onlineClass"
                        android:textColor="@color/material_blue_900"
                        android:textSize="20sp" />

                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_discount_old_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="10dp"
                        android:text="@string/tv_start_onlineClass"
                        android:textColor="@color/material_blue_800"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>



            <!-- Button in Class -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:elevation="1dp"
                android:orientation="horizontal">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_enterClass_onlineClass"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/ripple_button_discount"
                        android:text="@string/tv_enterClass_onlineClass"
                        android:textColor="#fff"
                        android:textSize="12sp" />



                </LinearLayout>




            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>